--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
     --secondary-text-color:#191919;
     --secondary-color:#868686;
     --tertiary-color:#eff3f4;
+    --secondary-bg-color:#5c1011;
 
 
 }
@@ -369,7 +370,6 @@ height: 100px;
 /* contatos */
 
 #contact{
-    /* margin-bottom: 500px; */
     background-color: var(--main-color);
     gap: 0;
     padding-bottom: 5rem;
@@ -416,7 +416,8 @@ border: none;
   align-self: start;
   border:2px solid var(--primary-text-color) ;
   font-size: 1.2rem;
-  text-align: center;
+  transition: 0.4s;
+  /* text-align: center; */
 }
 
 #contact-information .btn:hover{
@@ -424,4 +425,268 @@ border: none;
     color: var(--main-color);
 }
 
+/* rodapé */
 
+#footer{
+  color: var(--primary-text-color); 
+  background-color: var(--secondary-bg-color);
+  display: flex;
+  /* justify-content: space-around; espaça igualmente */
+  justify-content: space-around; 
+  padding: 3rem 3rem 5rem;
+ 
+}
+
+#footer i {
+    font-size: 1rem;
+    padding: 0.3rem;
+}
+
+#footer a {
+ color: var(--primary-text-color);
+}
+
+.contact-info,
+.links-container {
+    width: 20%;
+}
+
+.footer-brand {
+    margin-bottom: 2rem;
+}
+
+.footer-brand h2{
+   background-color: var(--main-color);
+   margin-bottom: 0.5rem;
+   padding: 1rem;
+}
+
+.contact-info p{
+    margin-bottom: 1rem;
+}
+.contact-info p i {
+    background-color: transparent;
+    padding: 0 ;
+    color: var(--main-color);
+}
+
+.social-networks p {
+    margin-bottom: 1rem;
+}
+.networks{
+    margin-top: 2rem;
+    display: flex;
+    gap: 1rem;
+}
+
+#footer .networks i {
+padding: 1rem;
+}
+
+.links-container h4 {
+    text-transform: uppercase;
+    margin-bottom: 2rem;
+    padding: 1rem;
+}
+
+.links-container nav{
+  display: flex;
+  flex-direction: column;
+}
+
+.links-container nav a {
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid var(--secondary-color);
+  }
+
+  .phone-number{
+display: flex;
+border: 1px solid var(--main-color);
+gap: 1rem;
+align-items: center;
+margin-bottom: 1rem;
+  }
+
+  .phone-info{
+color:var(--secondary-color) ;
+  }
+
+  /* Mobile navbar */
+
+#menu, #close-menu {
+    font-size: 2rem;
+    padding: 1rem;
+    display: none;
+}
+
+#close-menu{
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+#mobile-navbar {
+    position: fixed;
+    top: 0;
+    left:100% ;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.95);
+    display: flex;
+    flex-direction: column;
+    padding: 4rem 2rem ;
+    transition: 0.4s;
+    z-index: 5;
+
+}
+#mobile-navbar.menu-active{
+    left: 0;
+}
+
+#mobile-navbar a{
+    color:var(--primary-text-color);
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+border-bottom:1px solid var(--main-color);
+}
+
+/* responsividade */
+  @media (max-width:450px){
+  
+/* geral */
+
+body{
+  /* tirar o scroll lateral overflow-x: hidden; */
+    overflow-x: hidden;
+}
+/* icones */
+i{
+    padding: 1.5rem;
+    font-size: 2rem;
+}
+/* navbar */
+#navbar{
+display: none;
+}
+
+#menu, 
+#close-menu {
+        display: block;
+}
+.banner{
+   max-width:100% ;
+   padding: 4rem 2rem;
+}
+
+.banner h2{
+    font-size: 3rem;
+}
+
+.banner p {
+    font-size: 1rem;
+}
+
+/* areas de atuação */
+.btn{
+    align-self: initial;
+}
+
+.image-container{
+    flex: 1 1 100%;
+}
+#other-serviçes{
+  flex-wrap: wrap;  
+}
+
+/* sobre nos */
+
+#about{
+    gap: 0;
+}
+#about-text,
+#about-data{
+flex: 1 1 100%;
+}
+.about-description{
+    gap:1rem
+}
+.about-description i{
+    padding: 0;
+    min-width: 40px;
+}
+#about #about-data .data{
+    width: 100%;
+    border: none;
+    border-bottom:1px solid var(--secondary-text-color);
+}
+/* depoimentos */
+
+.text-container{
+    text-align: center;
+    padding: 2rem;
+}
+
+/* colaboradores */
+#team{
+    margin-top: 2rem;
+}
+
+#team h2{
+    font-size: 2.5rem;
+}
+
+.employees{
+    flex-wrap: wrap;
+}
+/* contatos */
+#contact{
+    padding-bottom: 0;
+}
+#contact-information {
+   padding: 7rem 1rem; 
+}
+#contact-information .form-control {
+    flex-direction: column; 
+
+ }
+
+ #contact-information .btn{
+    align-self: auto;
+ }
+
+ /* rodape */
+
+#footer{
+flex-wrap: wrap;
+}
+
+#footer i {
+    font-size: 2rem;
+    padding: 1rem;
+    }
+
+.footer-brand{
+    text-align: center;
+}
+
+.networks{
+    margin-bottom: 3rem;
+}
+
+.links-container{
+    margin-bottom: 1rem;
+}
+
+.links-container h4{
+    margin-bottom: 1.5rem;
+}
+
+.contact-info,
+.links-container{
+   width: 100%; 
+}
+
+  }
